--- a/endpoints/recommend.yaml
+++ b/endpoints/recommend.yaml
@@ -3,6 +3,6 @@ backends:
     deployment:
       branch: main
       name: filtering_deployment
-      version: latest
+      version: 3
     weight: 1
 schemaVersion: 1
